fix(personal_plan) Don't show images on mobile

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -809,7 +809,7 @@ h2:after {
 }
 
 #plan-personal-content .plan-personal-row {
-  margin-top: 120px;
+  margin-top: 80px;
 }
 
 #plan-personal-content .download-tabel {
